--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.2.96",
+    "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuetify": "^3.3.15",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~5.0.0",
